syntax = "proto3";

option java_multiple_files = true;
option java_package = "at.htl.mymusic";
option java_outer_classname = "ArtistProto";

package entity;

service ArtistSeeker {
  // Sends a greeting
  rpc GetArtist (ArtistRequest) returns (ArtistReply) {}
}

message ArtistRequest {
  int32 id = 1;
}

message ArtistReply {
  string firstName = 1;
  string lastName = 2;
}